General clean up of source code for ALPHA 2.8.0